@startuml Development View
title Package Diagram

left to right direction

package "Characters" as CH {
  class mob
  class Player
  class Enemy
}

package "Game Logic" as GL {
  class Game
  class Room
  class Room_Stage
  class Room_Shop
}

package "Items" as IT {
  class Item
  class Weapon
  class Armor
  class Potion
  class Potion_HP
  class Potion_Strength
}

GL --> CH
note on link
controls
end note

GL --> IT
note on link
uses
end note

CH --> IT
note on link
uses
end note
@enduml